--- a/productos.html
+++ b/productos.html
@@ -12,7 +12,7 @@
   <img src="Lirio logo.png" alt="Logo LIRIO" >
   <h1>LIRIO</h1>
   <nav>
-    <a href="inicio.html">Inicio</a>
+    <a href="index.html">Inicio</a>
     <a href="sobre.html">Sobre Nosotros</a>
     <a href="productos.html">Productos</a>
   </nav>
@@ -103,3 +103,4 @@
 
 </body>
 </html>
+
