--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <img src="Lirio logo.png" alt="Logo LIRIO">
   <h1>LIRIO</h1>
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="sobre.html">Sobre Nosotros</a>
-    <a href="productos.html">Productos</a>
+    <a href="/P-gina-Web/index.html">Inicio</a>
+    <a href="/P-gina-Web/sobre.html">Sobre Nosotros</a>
+    <a href="/P-gina-Web/productos.html">Productos</a>
   </nav>
 </header>
 
@@ -53,4 +53,5 @@
 
 </body>
 </html>
+
 
