--- a/sobre.html
+++ b/sobre.html
@@ -12,10 +12,10 @@
 <header>
   <img src="Lirio logo.png" alt="Logo LIRIO">
   <h1>LIRIO</h1>
-   <nav>
-    <a href="/P-gina-Web/index.html">Inicio</a>
-    <a href="/P-gina-Web/sobre.html">Sobre Nosotros</a>
-    <a href="/P-gina-Web/productos.html">Productos</a>
+    <nav>
+    <a href="/Lirio/index.html">Inicio</a>
+    <a href="/Lirio/sobre.html">Sobre Nosotros</a>
+    <a href="/Lirio/productos.html">Productos</a>
   </nav>
 </header>
 
@@ -60,5 +60,6 @@
 
 </body>
 </html>
+
 
 
